ion-action-sheet

--- a/src/app/pages/action-sheet/action-sheet.page.html
+++ b/src/app/pages/action-sheet/action-sheet.page.html
@@ -1,5 +1,7 @@
 <app-header titulo="action sheet"></app-header>
 
 <ion-content padding>
-  <h1>Action Sheet Page</h1>
+  <ion-button expand="full" color="primary" (click)="presentActionSheet()">
+    Show Action Sheet
+  </ion-button>
 </ion-content>
