--- a/src/app/pages/alert/alert.page.html
+++ b/src/app/pages/alert/alert.page.html
@@ -1,5 +1,7 @@
-<app-header titulo="alert page"></app-header>
+<app-header [titulo]="titulo || 'Alert Page'"></app-header>
 
 <ion-content padding>
-  <h1>Alert Page</h1>
+  <ion-button expand="full" color="primary" (click)="presentAlert()">Show Alert</ion-button>
+  <ion-button expand="full" color="secondary" (click)="presentAlertPrompt()">Show Alert Input</ion-button>
+
 </ion-content>
