--- a/src/app/pages/grid/grid.page.html
+++ b/src/app/pages/grid/grid.page.html
@@ -1,7 +1,7 @@
 <app-header titulo="Grid - Rows"></app-header>
 
-<ion-content>
-  <ion-grid>
+<ion-content padding fullscreen>
+  <ion-grid fixed>
     <!-- <ion-row>
       <ion-col *ngFor="let c of [1,2,3,4,5,6,7,8,9,10,11,12]; let i = index">
        Item {{ i + 1 }} 
@@ -9,13 +9,16 @@
     </ion-row> -->
 
     <ion-row>
-      <ion-col *ngFor="let c of [1,2,3,4,5,6,7,8,9,10,11,12]">
+      <ion-col  size="12" size-lg="3" size-md="4" size-sm="6" size-xs="12"
+                *ngFor="let c of [1,1,1,1,1,1,1,1,1,1,1,1]">
         <ion-card>
           <ion-img src="/assets/shapes.svg"></ion-img>
+
           <ion-card-header>
             <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
             <ion-card-title>Card Title</ion-card-title>
           </ion-card-header>
+
           <ion-card-content>
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam aliquam magnam deserunt quod, eos quas dolores aliquid recusandae modi impedit ipsa voluptates sit. Fugit asperiores veritatis veniam est maiores! Nobis!
           </ion-card-content>
