--- a/src/app/pages/inicio/inicio.page.html
+++ b/src/app/pages/inicio/inicio.page.html
@@ -8,15 +8,18 @@
                        menu="primerMenu">
       </ion-menu-button>
     </ion-buttons>
-    <ion-title>Componentes</ion-title>
+    <ion-title color="primary">Componentes</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
   <ion-list>
-    <ion-item *ngFor="let c of componentes" 
+    <ion-item *ngFor="let c of componentes | async" 
               [routerLink]="c.redirectTo" detail>
-      <ion-icon slot="start" [name]="c.icon"></ion-icon>
+      <ion-icon slot="start" 
+                [name]="c.icon"
+                color="primary">
+      </ion-icon>
       <ion-label>{{ c.name }}</ion-label>
     </ion-item>
   </ion-list>
