--- a/src/app/pages/searchbar/searchbar.page.html
+++ b/src/app/pages/searchbar/searchbar.page.html
@@ -11,7 +11,7 @@
 
 <ion-content>
   <ion-list>
-    <ion-item *ngFor="let album of albums">
+    <ion-item *ngFor="let album of albums | filtro: textoBuscar: 'title'">
       {{ album.title }}
     </ion-item>
   </ion-list>
