ion-skeleton-text

--- a/src/app/pages/segment/segment.page.html
+++ b/src/app/pages/segment/segment.page.html
@@ -19,13 +19,29 @@
 
 <ion-content>
   <ion-list>
-    <ion-item *ngFor="let hero of (superHeroes | async) | filtro: publisher:'publisher'">
+    <ion-item *ngFor="let hero of (superHeroes | async) | filtro: publisher:'publisher'" class="animated fadeIn fast">
       <ion-label>
         <h3>{{ hero.superhero }} <small>{{ hero.alter_ego }}</small></h3>
         <p>{{ hero.first_appearance }}</p>
       </ion-label>
       <ion-label slot="end" text-right>
         {{ hero.publisher }}
+      </ion-label>
+    </ion-item>
+  </ion-list>
+
+  <ion-list *ngIf="(superHeroes | async) === null" class="animated flash slow infinite">
+    <ion-item *ngFor="let item of [1,1,1,1,1,1,1,1,1,1]">
+      <ion-label>
+        <h3>
+          <ion-skeleton-text style="width: 70%"></ion-skeleton-text>
+        </h3>
+        <p>
+          <ion-skeleton-text style="width: 100%"></ion-skeleton-text>
+        </p>
+      </ion-label>
+      <ion-label slot="end" text-right>
+        <ion-skeleton-text style="width: 40px"></ion-skeleton-text>
       </ion-label>
     </ion-item>
   </ion-list>
