--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,26 @@
 <ion-app>
-  <app-menu></app-menu>
-  <ion-router-outlet id="main"></ion-router-outlet>
+  <ion-split-pane when="md" contentId="main">
+    <!-- <app-menu></app-menu> -->
+    <ion-menu side="start" menuId="primerMenu" contentId="main">
+      <ion-header>
+        <ion-toolbar color="primary">
+          <ion-title>Components Menu</ion-title>
+        </ion-toolbar>
+      </ion-header>
+      <ion-content>
+        <ion-list>
+          <ion-menu-toggle autoHide="false" *ngFor="let c of componentes | async">
+            <ion-item [routerLink]="c.redirectTo">
+              <ion-icon slot="start" [name]="c.icon"></ion-icon>
+              <ion-label>
+                {{ c.name}}
+              </ion-label>
+            </ion-item>
+          </ion-menu-toggle>
+        </ion-list>
+      </ion-content>
+    </ion-menu>
+
+    <ion-router-outlet id="main"></ion-router-outlet>
+  </ion-split-pane>
 </ion-app>
