--- a/src/app/pages/popover/popover.page.html
+++ b/src/app/pages/popover/popover.page.html
@@ -5,7 +5,7 @@
     </ion-buttons>
     <ion-title>Popover</ion-title>
     <ion-buttons slot="end" >
-      <ion-button (click)="mostrarPop()">
+      <ion-button (click)="mostrarPop($event)">
         <ion-icon name="contact" slot="icon-only"></ion-icon>
       </ion-button>
     </ion-buttons>
@@ -13,7 +13,7 @@
 </ion-header>
 
 <ion-content padding>
-  <ion-button expand="full" (click)="mostrarPop()">
+  <ion-button expand="full" (click)="mostrarPop($event)">
     <ion-icon slot="icon-only" name="contact"></ion-icon>
     <ion-label>Popover</ion-label>
   </ion-button>
@@ -22,8 +22,8 @@
 <ion-footer>
   <ion-toolbar color="primary"> 
     <ion-buttons slot="start">
-      <ion-button (click)="mostrarPop()">
-        <ion-icon name="contact" slot="icon-only"></ion-icon>
+      <ion-button (click)="mostrarPop($event)">
+        <ion-icon name="contact" slot="start"></ion-icon>
       </ion-button>
     </ion-buttons>
     <ion-title>Footer</ion-title>
